--- a/Floricultura/Floricultura.csproj
+++ b/Floricultura/Floricultura.csproj
@@ -46,12 +46,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CadastrarFunc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastrarFunc.Designer.cs">
+      <DependentUpon>CadastrarFunc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CadastrarProd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastrarProd.Designer.cs">
+      <DependentUpon>CadastrarProd.cs</DependentUpon>
+    </Compile>
     <Compile Include="CadastroClien.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="CadastroClien.Designer.cs">
       <DependentUpon>CadastroClien.cs</DependentUpon>
     </Compile>
+    <Compile Include="classes\Cliente.cs" />
+    <Compile Include="classes\Funcionário.cs" />
+    <Compile Include="classes\Produto.cs" />
+    <Compile Include="classes\Venda.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +88,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Venda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Venda.Designer.cs">
+      <DependentUpon>Venda.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CadastroClien.resx">
       <DependentUpon>CadastroClien.cs</DependentUpon>
     </EmbeddedResource>
@@ -106,8 +128,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="classes\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
